corretto selezione foto

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -130,7 +130,9 @@ a.minus-star {width:24px;height:24px;background-image: url("../images/icon-star-
 a.plus-star {width:24px;height:24px;background-image: url("../images/icon-star-empty.png");}
 
 /*foto*/
+.no-foto{color:#999;font-size:20px;line-height:200%;text-align:center;}
 .image-selected{background:url("../images/icon-star-full.png") no-repeat top right;}
+
 
 /* Custom Icon*/
 .ui-icon-classifica {background-image: url("../images/icon-classifica.png");}
