--- a/www/css/style.css
+++ b/www/css/style.css
@@ -131,8 +131,9 @@ a.plus-star {width:24px;height:24px;background-image: url("../images/icon-star-e
 
 /*foto*/
 .no-foto{color:#999;font-size:20px;line-height:200%;text-align:center;}
-#foto-anteprime img{width:80px;margin:0 5px 5px 0;}
-.image-selected{background:url("../images/icon-star-full.png") no-repeat top right;}
+/*#foto-anteprime img{position:absolute;top:50%;left:50%;width:80px;margin-left:-40px;margin-top:-40px;}*/
+#foto-anteprime .image-selected{position:relative;width:80px;margin:0 5px 5px 0;}
+#foto-anteprime .image-selected span{position:absolute;top:0;right:0;width:24px;height:24px;background:url("../images/accept.png") no-repeat top right;}
 
 
 /* Custom Icon*/
