--- a/www/css/style.css
+++ b/www/css/style.css
@@ -100,18 +100,19 @@ ul.showdatisquadra {background:#fff !important;}
 /*referto*/
 ul.referto {list-style-type:none;padding-left:0;margin-left:0;}
 ul.referto li {height:45px;border-bottom:1px solid #e5e5e5;}
-div#referto-box{background:#fff;border:1px solid #ccc;}
+div#referto-box{background:#fff;/*border:1px solid #ccc;*/}
 div.referto-data{text-align:center;}
 div#referto-sospesa-rinviata{border:none;border-top:1px solid #ccc;}
 div.referto-ospite,div.referto-locale,div.referto-arbitro,div.referto-voto{height:30px;border:none;}
 div.referto-formazione{border:none;}
 div.referto-formazione img{vertical-align:middle;}
 div.referto-formazione small{color:#999;}
-div.referto-arbitro,div.referto-voto{border-top:1px solid #bbb;border-bottom:1px solid #bbb;height:100%;}
-div.referto-top{border:0;border-bottom:1px solid #bbb;}
+div.referto-arbitro,div.referto-voto{margin:5px 0;height:100%;}
+div.referto-top{border:0;}
 a.referto-voto{color:#fff;background:#9c0;z-index:0;opacity:1;}
 div.referto-ospite, div.referto-locale{font-size:1.3em;line-height:2.6em;text-align:center}
 div.referto-ospite-gol, div.referto-locale-gol {height:30px;border:none;font-size:3em;font-weight:bold;line-height:0.75em;text-align:center}
+#referto .ui-body-d{border:0;border-bottom:1px solid #bbb;}
 
 /*squadra*/
 .responsabili{margin-top:8px;}
